put the loading component in a div to prevent an undesired visual effect on small screens when scrolling to the bottom of the page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -39,6 +39,12 @@
   width: 50%;
 }
 
+.bottomLoadDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (max-width: 768px) {
   .main {
     flex-direction: column;
